--- a/config.yml.example
+++ b/config.yml.example
@@ -1,15 +1,23 @@
 ---
 accounts:
   - name: '<account_name_1>'
+    # budget_id and account_id can be found in the URL, e.g., https://app.youneedabudget.com/<budget_id>/accounts/<account_id>
+    ynab_budget_id: '<budget_id_1>'
+    ynab_account_id: '<account_id_1>'
     bank: 'n26'
     settings:
       username: '<username_1>'
       password: '<password_1>'
       card_id: '<card_id_1>'
   - name: '<account_name_2>'
+    ynab_budget_id: '<budget_id_1>'
+    ynab_account_id: '<account_id_2>'
     bank: 'n26'
     settings:
-      username: '<username_2>
+      username: '<username_2>'
       password: '<password_2>'
       card_id: '<card_id_2>'
+ynab:
+  # get API token here: https://app.youneedabudget.com/settings/developer
+  api_token: '<token>'
 ...
