Package the app with serverless and deploy it to AWS Lambda

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-.idea
+# Serverless directories
+.serverless
+
 .python-version
 config.yml
-venv
+node_modules
 ynab_importer.log
-
 *.csv
 __pycache__
 *.py[cod]
