--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ynab-importer",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {},
+  "dependencies": {
+    "serverless": "^1.53.0"
+  },
   "devDependencies": {
     "serverless-python-requirements": "^5.0.0"
   }
