--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,7 @@ provider:
   region: eu-central-1
   stage: production
   memorySize: 128  # MB
+  timeout: 20  # seconds, default is 6 seconds
 
 package:
   exclude:
