--- a/serverless.yml
+++ b/serverless.yml
@@ -17,9 +17,9 @@ package:
 functions:
   sync-transactions:
     handler: handler.sync
-    events:
-      - schedule:
-          rate: cron(0 18 * * ? *)
+    #events:
+    #  - schedule:
+    #      rate: cron(0 18 * * ? *)
 
 plugins:
   - serverless-python-requirements
