--- a/config.yml.example
+++ b/config.yml.example
@@ -8,6 +8,7 @@ accounts:
     settings:
       username: '<username_1>'
       password: '<password_1>'
+      device_token: '<00000000-0000-0000-0000-000000000000>'
   - name: '<account_name_2>'
     ynab_budget_id: '<budget_id_1>'
     ynab_account_id: '<account_id_2>'
@@ -15,6 +16,7 @@ accounts:
     settings:
       username: '<username_2>'
       password: '<password_2>'
+      device_token: '<00000000-0000-0000-0000-000000000000>'
 ynab:
   # get API token here: https://app.youneedabudget.com/settings/developer
   api_token: '<token>'
