--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,4 @@
--e git+https://github.com/deanmcgregor/ynab-python.git@83b533589e4ef7c979f15ab0b6e0bfa8e6cd2673#egg=ynab-pythonclick==6.7
+-e git+https://github.com/deanmcgregor/ynab-python.git
 click==7.1.2
 n26==3.2.6
 pip-compile-multi==1.5.9
